fix gap cards

--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -3,5 +3,5 @@
   height: 608px;
   object-fit: cover;
   object-position: top;
-  margin-right: 40px;
+  margin-right: 48px;
 }
